--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,12 @@ a:hover, a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
-a img{
+a img {
 	border: none 0px #fff;
+}
+img {
+  width: 80%;
+  height: auto;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
@@ -57,6 +61,7 @@ nav {
 }
 nav h1 {
   margin: auto;
+  padding-top: 25px;
 }
 nav h1 a {
   color: #fff;
@@ -183,6 +188,11 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+.inside {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .inside header {
   position: fixed;
   top: 0;
@@ -205,7 +215,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -219,6 +229,8 @@ nav h1 a {
 }
 #restaurant-img {
 	width: 90%;
+  border-top-left-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -240,7 +252,7 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
+  width: 100%;
 }
 #reviews-container {
   padding: 30px 40px 80px;
@@ -258,18 +270,54 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
   width: 85%;
+  border-top-left-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
+  padding: 0 20px 20px;
+  margin: 0;
 }
 #restaurant-hours td {
   color: #666;
+}
+
+.review-title {
+  width:100%;
+  display: inline-block;
+  color: #fff;
+  background-color: #4d4d4d;
+  padding-top: 10px;
+
+}
+
+.reviewer {
+  color: #fff;
+  font-size: 18pt;
+  margin-left: 10px;
+}
+
+.date {
+  color: #C3C3C3;
+  text-align: right;
+}
+
+@media screen and (min-width: 300px) {
+  #breadcrumb{
+    width: 100%;
+  }
+  .inside #map {
+    order: 1;
+  }
+  .inside #map-container {
+    width: 100%;
+    height: 300px;
+    position: relative;
+  }
 }
