--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,6 @@ a:hover, a:focus {
 a img {
 	border: none 0px #fff;
 }
-img {
-  width: 80%;
-  height: auto;
-}
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
@@ -67,7 +63,6 @@ nav h1 a {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
-  letter-spacing: 10px;
   text-transform: uppercase;
 }
 #breadcrumb {
@@ -104,38 +99,40 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 300px;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
-  align-items: center;
+  background-color: #fff;
+  padding-top: 10px;
 }
 .filter-options h2 {
-  color: white;
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 10px 0 10px 10%;
 }
 .filter-options select {
   background-color: white;
-  border: 1px solid #fff;
+  border: 1px solid #000;
   font-family: Arial,sans-serif;
   font-size: 11pt;
-  height: 35px;
+  height: 40px;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  margin: 0 0 10px 10%;
+  width: 40%;
+  min-width: 170px;
+  max-width: 220px;
+  box-shadow: 0 0 8px 0 rgba(17,22,26,.16);
 }
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+  display: flex;
+  flex-wrap: wrap;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -146,11 +143,14 @@ nav h1 a {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
+  margin: 10px auto 10px auto;
+  min-height: 390px;
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+  box-shadow: 5px 5px 25px 0 rgba(46,61,73,.2);
+  border-radius: .375rem;
+  transition: all .3s ease;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -215,7 +215,6 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -223,12 +222,11 @@ nav h1 a {
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
   border-top-left-radius: 25px;
   border-bottom-right-radius: 25px;
 }
@@ -246,13 +244,13 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
+  border-radius: 5px;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 100%;
 }
 #reviews-container {
   padding: 30px 40px 80px;
@@ -276,48 +274,91 @@ nav h1 a {
   margin: 0 0 30px;
   overflow: hidden;
   position: relative;
-  width: 85%;
+  width: 100%;
   border-top-left-radius: 25px;
   border-bottom-right-radius: 25px;
 }
 #reviews-list li p {
-  padding: 0 20px 20px;
+  padding: 20px 20px 20px;
   margin: 0;
+  font-size: 14px;
 }
 #restaurant-hours td {
   color: #666;
+  background-color: #fff;
+}
+#restaurant-hours {
+  border: 1px; 
+  box-shadow: 2px 2px 4px #888888;
+  text-align: center;
+  margin: auto;
+  width: 100%;
 }
 
-.review-title {
-  width:100%;
-  display: inline-block;
-  color: #fff;
+/*==================== Restaurant Details -> Reviews ===============*/
+#review-title {
   background-color: #4d4d4d;
-  padding-top: 10px;
-
+  width: 100%;
+  display: inline-block;
 }
-
+.reviewer, .date {
+  display: inline-block;
+}
 .reviewer {
   color: #fff;
   font-size: 18pt;
-  margin-left: 10px;
+  font-weight: 600; 
 }
-
 .date {
   color: #C3C3C3;
-  text-align: right;
+  float: right;
 }
 
+.rating {
+  background: #f58500;
+  color: #fff;
+  text-transform: uppercase;
+  width: 90px;
+}
+
+/*==================== Responsive Design ===============*/
+
 @media screen and (min-width: 300px) {
-  #breadcrumb{
-    width: 100%;
+  nav h1 a {
+    font-size: 9pt;
+    letter-spacing: 8px;
   }
-  .inside #map {
-    order: 1;
+  #breadcrumb{
+    position: fixed;
+    width: 100%;
   }
   .inside #map-container {
     width: 100%;
     height: 300px;
     position: relative;
   }
+  .filter-options select {
+    display: block;
+  }
+  .filter-options {
+    height: 140px;
+  }
+}
+@media screen and (min-width: 321px) {
+  nav h1 a {
+    font-size: 11pt;
+    letter-spacing: 10px;
+  }
+  
+}
+@media screen and (min-width: 698px) {
+  .filter-options select {
+    display: inline-block;
+  }
+  .filter-options {
+    height: 95px;
+  }
+}
+@media screen and (min-width: 768px) {
+  
 }
