--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ nav h1 a {
   font-size: 1.3rem;
   font-weight: normal;
   line-height: 1;
-  margin: 10px 0 10px 10%;
+  margin: 10px 0 10px 50px;
 }
 .filter-options select {
   background-color: white;
@@ -122,7 +122,7 @@ nav h1 a {
   font-size: 11pt;
   height: 40px;
   letter-spacing: 0;
-  margin: 0 0 10px 10%;
+  margin: 0 0 10px 20px;
   width: 40%;
   min-width: 170px;
   max-width: 220px;
@@ -160,7 +160,7 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
-#restaurants-list li h1 {
+#restaurants-list li h3 {
   color: #f18200;
   font-family: Arial,sans-serif;
   font-size: 14pt;
@@ -175,9 +175,10 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
-  border-bottom: 3px solid #eee;
-  color: #fff;
+  background-color: #fff;
+  border: 1px solid #ff8b02;
+  border-radius: 5px;
+  color: #000;
   display: inline-block;
   font-size: 10pt;
   margin: 15px 0 0;
@@ -185,14 +186,11 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  width: 80%;
+  box-shadow: 0 0 8px 0 rgba(17,22,26,.16);
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .inside header {
   position: fixed;
   top: 0;
@@ -214,7 +212,6 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
 }
 #restaurant-name {
   color: #f18200;
@@ -224,11 +221,6 @@ nav h1 a {
   letter-spacing: 0;
   text-transform: uppercase;
   line-height: 1.1;
-}
-#restaurant-img {
-	width: 100%;
-  border-top-left-radius: 25px;
-  border-bottom-right-radius: 25px;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -319,46 +311,4 @@ nav h1 a {
   color: #fff;
   text-transform: uppercase;
   width: 90px;
-}
-
-/*==================== Responsive Design ===============*/
-
-@media screen and (min-width: 300px) {
-  nav h1 a {
-    font-size: 9pt;
-    letter-spacing: 8px;
-  }
-  #breadcrumb{
-    position: fixed;
-    width: 100%;
-  }
-  .inside #map-container {
-    width: 100%;
-    height: 300px;
-    position: relative;
-  }
-  .filter-options select {
-    display: block;
-  }
-  .filter-options {
-    height: 140px;
-  }
-}
-@media screen and (min-width: 321px) {
-  nav h1 a {
-    font-size: 11pt;
-    letter-spacing: 10px;
-  }
-  
-}
-@media screen and (min-width: 698px) {
-  .filter-options select {
-    display: inline-block;
-  }
-  .filter-options {
-    height: 95px;
-  }
-}
-@media screen and (min-width: 768px) {
-  
 }
